serving/metadata-webhook/config/namespaced-resources/400-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    role: webhook
    samples.knative.dev/release: devel
  name: webhook
spec:
  ports:
    - port: 443
      targetPort: 8443
  selector:
    role: webhook
