serving/metadata-webhook/config/namespaced-resources/600-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: metadata-webhook
  labels:
    app: webhook
spec:
  podSelector:
    matchLabels:
      app: webhook
  ingress:
  - {}
